# computer-graphics-4sem-2026

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  maker.sh
Libraries/raygui/: CMakeLists.txt
Projects/lab1/: main.cpp
Projects/lab2/: CMakeLists.txt  figure.hpp  hare.hpp  main.cpp  turtle.hpp
