cmake_minimum_required(VERSION 3.5)
project(project-practice-leontiev)

set(CMAKE_CXX_STANDARD 20)
set(BUILD_SHARED_LIBS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(SOLUTION_ROOT ${CMAKE_CURRENT_LIST_DIR})
if(CMAKE_COMPILER_IS_GNUCXX AND NOT WIN32)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -pedantic")
endif()

add_subdirectory(Libraries/nfd)
add_subdirectory(Libraries/raylib)
add_subdirectory(Libraries/raygui)

set(projects_dir ${CMAKE_CURRENT_LIST_DIR}/Projects)
file(GLOB children RELATIVE ${projects_dir} ${projects_dir}/*)
foreach(child ${children})
    if(IS_DIRECTORY ${projects_dir}/${child})
        add_subdirectory(${projects_dir}/${child})
    endif()
endforeach()
